--- a/css/about_res.css
+++ b/css/about_res.css
@@ -29,7 +29,6 @@
     }
 
     a.close_1 , a.close_2 , a.close_3 , a.close_4 {
-        top: -80%;
         color: #0066ff;
     }
 
@@ -41,17 +40,6 @@
         margin-top: 2%;
         padding-bottom: 20px;
     }
-    
-    a.close_1 , a.close_2 , a.close_3 , a.close_4 {
-        top: -80%;
-    }
 
 }
 
-@media only screen and (max-width: 360px) {
-
-    a.close_1 , a.close_2 , a.close_3 , a.close_4 {
-        top: -63%;
-    }
-
-}
